Basic style check works, need to add documentations

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <!-- Accepts user copy of CSS code-->
       <form id="input">
         <textarea id="editor" name="editor" rows="25" cols="100"
-          placeholder="Copy and paste your CSS code here..." required></textarea>
+          placeholder="Copy and paste your FULL CSS code here..." required></textarea>
         <br />
         <button id="submit" disabled>Check my CSS!</button>
       </form>
