Added documentation to php file and modified button function

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <textarea id="editor" name="editor" rows="25" cols="100"
           placeholder="Copy and paste your FULL CSS code here..." required></textarea>
         <br />
-        <button id="submit" disabled>Check my CSS!</button>
+        <button id="submit">Check my CSS!</button>
       </form>
       <div id="output-area">
       </div>
