Added ability to response with plain text and all the random tips

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <title>CSE 154 CSS Lint</title>
   </head>
   <body>
-    <h1>CSE 154 CSS Lint (Beta Test)</h1>
+    <h1>CSE 154 CSS Lint (UNOFFICIAL)</h1>
+    <div id="disclaimer">
+      <h2>Warning</h2>
+      <p>
+        Passing this CSS Lint does NOT guarantee that your code follows the style
+        guide perfectly or works as expected!
+      </p>
+      <button id="hide-warning">Ok, I get it</button>
+    </div>
     <div id="random-tips-area">
       <!-- To be populated with a random section from the CSS Code Quality Guide -->
       <p>Click the button to get a random CSS style tip!</p>
