Added error handling to failed fetch requests and displays the full guide on the page when requested

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <!-- To be populated with a random section from the CSS Code Quality Guide -->
       <p>Click the button to get a random CSS style tip!</p>
       <button id="get-tip">Next CSS Code Quality Tip</button>
+      <button id="get-full-guide">Get Full CSS Code Quality Guide</button>
     </div>
     <div id="editor-area">
       <!-- Accepts user copy of CSS code-->
@@ -35,8 +36,8 @@
         <br />
         <button id="submit">Check my CSS!</button>
       </form>
-      <div id="output-area">
-      </div>
+      <!-- To be populated with output -->
+      <div id="output-area"></div>
     </div>
 
   </body>
